// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`VariantButton accent snapshot 1`] = `
<button
  style={
    Object {
      "alignItems": "center",
      "backgroundColor": "#9B51E0",
      "border": "1px solid #000000",
      "borderRadius": 8,
      "color": "#F2F2F2",
      "display": "flex",
    }
  }
>
  <div
    data-testid="label"
    style={
      Object {
        "padding": "0 10px",
      }
    }
  >
    Accent
  </div>
</button>
`;

exports[`VariantButton disabled snapshot 1`] = `
<button
  disabled={true}
  style={
    Object {
      "alignItems": "center",
      "backgroundColor": "#E0E0E0",
      "border": "1px solid #000000",
      "borderRadius": 8,
      "color": "#828282",
      "display": "flex",
    }
  }
>
  <div
    data-testid="label"
    style={
      Object {
        "padding": "0 10px",
      }
    }
  >
    Disabled
  </div>
</button>
`;

exports[`VariantButton error snapshot 1`] = `
<button
  style={
    Object {
      "alignItems": "center",
      "backgroundColor": "#EB5757",
      "border": "1px solid #000000",
      "borderRadius": 8,
      "color": "#F2F2F2",
      "display": "flex",
    }
  }
>
  <div
    data-testid="label"
    style={
      Object {
        "padding": "0 10px",
      }
    }
  >
    Error
  </div>
</button>
`;

exports[`VariantButton overview 0 snapshot 1`] = `
<button
  style={
    Object {
      "alignItems": "center",
      "backgroundColor": "#2F80ED",
      "border": "1px solid #000000",
      "borderRadius": 8,
      "color": "#F2F2F2",
      "display": "flex",
    }
  }
>
  <div
    data-testid="label"
    style={
      Object {
        "padding": "0 10px",
      }
    }
  >
    Gisselle Mohr
  </div>
</button>
`;

exports[`VariantButton overview 1 snapshot 1`] = `
<button
  style={
    Object {
      "alignItems": "center",
      "backgroundColor": "#2F80ED",
      "border": "1px solid #000000",
      "borderRadius": 8,
      "color": "#F2F2F2",
      "display": "flex",
    }
  }
>
  <div
    data-testid="label"
    style={
      Object {
        "padding": "0 10px",
      }
    }
  >
    Barbara Brakus
  </div>
</button>
`;

exports[`VariantButton overview 2 snapshot 1`] = `
<button
  style={
    Object {
      "alignItems": "center",
      "backgroundColor": "#2F80ED",
      "border": "1px solid #000000",
      "borderRadius": 8,
      "color": "#F2F2F2",
      "display": "flex",
    }
  }
>
  <div
    data-testid="label"
    style={
      Object {
        "padding": "0 10px",
      }
    }
  >
    Adah Nolan
  </div>
</button>
`;

exports[`VariantButton overview 3 snapshot 1`] = `
<button
  style={
    Object {
      "alignItems": "center",
      "backgroundColor": "#2F80ED",
      "border": "1px solid #000000",
      "borderRadius": 8,
      "color": "#F2F2F2",
      "display": "flex",
    }
  }
>
  <div
    data-testid="label"
    style={
      Object {
        "padding": "0 10px",
      }
    }
  >
    Jon Will
  </div>
</button>
`;

exports[`VariantButton overview 4 snapshot 1`] = `
<button
  style={
    Object {
      "alignItems": "center",
      "backgroundColor": "#2F80ED",
      "border": "1px solid #000000",
      "borderRadius": 8,
      "color": "#F2F2F2",
      "display": "flex",
    }
  }
>
  <div
    data-testid="label"
    style={
      Object {
        "padding": "0 10px",
      }
    }
  >
    Mr. Dulce Rice
  </div>
</button>
`;

exports[`VariantButton overview 5 snapshot 1`] = `
<button
  style={
    Object {
      "alignItems": "center",
      "backgroundColor": "#2F80ED",
      "border": "1px solid #000000",
      "borderRadius": 8,
      "color": "#F2F2F2",
      "display": "flex",
    }
  }
>
  <div
    data-testid="label"
    style={
      Object {
        "padding": "0 10px",
      }
    }
  >
    Mrs. Jermey Jacobson
  </div>
</button>
`;

exports[`VariantButton overview 6 snapshot 1`] = `
<button
  style={
    Object {
      "alignItems": "center",
      "backgroundColor": "#2F80ED",
      "border": "1px solid #000000",
      "borderRadius": 8,
      "color": "#F2F2F2",
      "display": "flex",
    }
  }
>
  <div
    data-testid="label"
    style={
      Object {
        "padding": "0 10px",
      }
    }
  >
    Clark Hickle
  </div>
</button>
`;

exports[`VariantButton overview 7 snapshot 1`] = `
<button
  style={
    Object {
      "alignItems": "center",
      "backgroundColor": "#2F80ED",
      "border": "1px solid #000000",
      "borderRadius": 8,
      "color": "#F2F2F2",
      "display": "flex",
    }
  }
>
  <div
    data-testid="label"
    style={
      Object {
        "padding": "0 10px",
      }
    }
  >
    Ibrahim Purdy
  </div>
</button>
`;

exports[`VariantButton overview 8 snapshot 1`] = `
<button
  style={
    Object {
      "alignItems": "center",
      "backgroundColor": "#2F80ED",
      "border": "1px solid #000000",
      "borderRadius": 8,
      "color": "#F2F2F2",
      "display": "flex",
    }
  }
>
  <div
    data-testid="label"
    style={
      Object {
        "padding": "0 10px",
      }
    }
  >
    Jody Legros
  </div>
</button>
`;

exports[`VariantButton overview 9 snapshot 1`] = `
<button
  style={
    Object {
      "alignItems": "center",
      "backgroundColor": "#2F80ED",
      "border": "1px solid #000000",
      "borderRadius": 8,
      "color": "#F2F2F2",
      "display": "flex",
    }
  }
>
  <div
    data-testid="label"
    style={
      Object {
        "padding": "0 10px",
      }
    }
  >
    Ford Kunze
  </div>
</button>
`;

exports[`VariantButton primary snapshot 1`] = `
<button
  style={
    Object {
      "alignItems": "center",
      "backgroundColor": "#2F80ED",
      "border": "1px solid #000000",
      "borderRadius": 8,
      "color": "#F2F2F2",
      "display": "flex",
    }
  }
>
  <div
    data-testid="label"
    style={
      Object {
        "padding": "0 10px",
      }
    }
  >
    Primary
  </div>
</button>
`;

exports[`VariantButton success snapshot 1`] = `
<button
  style={
    Object {
      "alignItems": "center",
      "backgroundColor": "#219653",
      "border": "1px solid #000000",
      "borderRadius": 8,
      "color": "#F2F2F2",
      "display": "flex",
    }
  }
>
  <div
    data-testid="label"
    style={
      Object {
        "padding": "0 10px",
      }
    }
  >
    Success
  </div>
</button>
`;

exports[`VariantButton warning snapshot 1`] = `
<button
  style={
    Object {
      "alignItems": "center",
      "backgroundColor": "#EB5757",
      "border": "1px solid #000000",
      "borderRadius": 8,
      "color": "#F2F2F2",
      "display": "flex",
    }
  }
>
  <div
    data-testid="label"
    style={
      Object {
        "padding": "0 10px",
      }
    }
  >
    Warning
  </div>
</button>
`;
